--- a/TestMdfEntityFramework/Views/MiCuenta.xaml
+++ b/TestMdfEntityFramework/Views/MiCuenta.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="TestMdfEntityFramework.Views.Reportes"
+﻿<UserControl x:Class="TestMdfEntityFramework.Views.MiCuenta"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TestMdfEntityFramework.Views"
              mc:Ignorable="d" 
-              d:DesignHeight="544" d:DesignWidth="670"
-             Background="Transparent" Loaded="Reportes_Load" Unloaded="Reportes_OnUnload">
+             d:DesignHeight="544" d:DesignWidth="670"
+             Background="Transparent">
     <UserControl.Resources>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
@@ -72,119 +72,7 @@
             </LinearGradientBrush>
         </Border.Background>
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="20"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition Width="30"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition Width="20"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50"></RowDefinition>
-                <RowDefinition Height="20"></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition Height="20"></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition Height="20"></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition Height="20"></RowDefinition>
-            </Grid.RowDefinitions>
-
-            <!--#region TITULO-->
-            <TextBlock Grid.Row="0"
-                       Grid.ColumnSpan="5"
-                       Text="Reportes"
-                       Foreground="White"
-                       FontSize="30"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"/>
-            <!--#endregion-->
-
-            <!--#region BOTONES -->
-            <Button x:Name="btnCorteCaja" 
-                    Grid.Column="1" Grid.Row="2"
-                    
-                    Width="280" Height="120" 
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Center"
-                    Background="GreenYellow"
-                    Style="{DynamicResource BTNSTYLE}"
-                    Click="btnCorteCaja_Click">
-
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="10"></ColumnDefinition>
-                        <ColumnDefinition Width="50"></ColumnDefinition>
-                        <ColumnDefinition Width="10"></ColumnDefinition>
-                        <ColumnDefinition Width="120"></ColumnDefinition>
-                        <ColumnDefinition Width="10"></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-
-                    
-                    <Image Grid.Column="1" Width="50" Height="50"
-                        Source="../SCS/IMG/corte_caja.png" 
-                        VerticalAlignment="Center" 
-                        HorizontalAlignment="Left"/>
-                    <TextBlock Grid.Column="3"
-                        Width="120"
-                        Height="60"
-                        TextAlignment="Center"
-                        Text="CORTE ALCANCIA" 
-                        TextWrapping="Wrap"
-                        Foreground="Black" 
-                        FontSize="20" 
-                        FontWeight="SemiBold"
-                        VerticalAlignment="Center" 
-                        HorizontalAlignment="Right"/>
-
-                </Grid>
-            </Button>
-            <!--#endregion-->
-
-            <!--#region POPUP OK -->
-            <Grid x:Name="popupGrid"
-              Visibility="Hidden"
-              Grid.Row="4" Grid.Column="2" 
-                  LostFocus="popupGrid_LostFocus" 
-                  MouseDown="popupGrid_MouseDown" 
-                  TouchDown="popupGrid_TouchDown">
-                <Grid Background="FloralWhite"
-                  Opacity="0.6"/>
-
-                <Canvas Background="Transparent">
-                    <Border x:Name="popupBd"
-                        Background="White" 
-                        BorderBrush="Gray"
-                        BorderThickness="2"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Width="300">
-                        <Grid Margin="10">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-
-                            <TextBlock Text="" 
-                                       x:Name="txtMensajePopup" 
-                                   FontSize="20"
-                                   FontWeight="SemiBold"
-                                   HorizontalAlignment="Center"
-                                   Margin="0,0,0,5"/>
-                            <StackPanel Orientation="Horizontal"
-                                    HorizontalAlignment="Center"
-                                    Margin="0,10,0,0"
-                                    Grid.Row="2">
-                                <Image Source="/SCS/IMG/palomita_verde.png" Width="100" Height="100" />
-
-                            </StackPanel>
-                        </Grid>
-                    </Border>
-                </Canvas>
-            </Grid>
-            <!--#endregion-->
-
-        </Grid>
+            
+    </Grid>
     </Border>
 </UserControl>
