--- a/TestMdfEntityFramework/Views/CobroMultitarifaV1.xaml
+++ b/TestMdfEntityFramework/Views/CobroMultitarifaV1.xaml
@@ -37,7 +37,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border CornerRadius="50" x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
+                        <Border CornerRadius="30" x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
                             <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                         </Border>
                         <ControlTemplate.Triggers>
@@ -86,18 +86,19 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="35" />
+                <RowDefinition Height="40" />
                 <RowDefinition Height="30" />
-                <RowDefinition Height="60"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="30"/>
-                <RowDefinition Height="60" />
+                <RowDefinition Height="50" />
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="5"/>
-                <RowDefinition Height="60"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="5"/>
-                <RowDefinition Height="60"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="5"/>
-                <RowDefinition Height="60"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition />
                 <RowDefinition Height="5"/>
@@ -122,8 +123,29 @@
                        VerticalAlignment="Center"/>
             <!--#endregion-->
 
+            <!--#region BOTON CANCELAR VENTA -->
+            <Button x:Name="btnCancelarVenta"
+                    Grid.Row="1" 
+                    Grid.Column="5" 
+                    Grid.ColumnSpan="4"
+                    Grid.RowSpan="2"
+                    Margin="30,10,30,10"
+                    Style="{DynamicResource BTNSTYLE}" 
+                    Click="btnCancelarVenta_Click"
+                    >
+                <Button.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black" Offset="0"/>
+                        <GradientStop Color="White" Offset="1"/>
+                    </LinearGradientBrush>
+                </Button.Background>
+                <TextBlock Text="CANCELAR VENTA" Foreground="White" 
+                           FontSize="20" FontWeight="Bold"/>
+            </Button>
+            <!--#endregion-->
+
             <!--#region LUGAR ORIGEN -->
-            <TextBlock Grid.Row="1" 
+            <TextBlock Grid.Row="2" 
                        Grid.Column="1"
                        Grid.ColumnSpan="10"
                        Text="LUGAR ORIGEN" 
@@ -134,7 +156,7 @@
                        HorizontalAlignment="Left"
                        />
             <ComboBox x:Name="cmbLugarOrigen" 
-                      Grid.Row="2" 
+                      Grid.Row="3" 
                       Grid.Column="1" 
                       Grid.ColumnSpan="10"
                       Background="Transparent"
@@ -146,7 +168,7 @@
             <!--#endregion-->
             
             <!--#region LUGAR DESTINO -->
-            <TextBlock Grid.Row="3" 
+            <TextBlock Grid.Row="4" 
                        Grid.Column="1"
                        Grid.ColumnSpan="10"
                        Text="LUGAR DESTINO" 
@@ -157,7 +179,7 @@
                        HorizontalAlignment="Left"
                        />
             <ComboBox x:Name="cmbLugarDestino" 
-                      Grid.Row="4" 
+                      Grid.Row="5" 
                       Grid.Column="1" 
                       Grid.ColumnSpan="10"
                       Background="Transparent"
@@ -171,7 +193,7 @@
             <!--#region PERFILES Y CANTIDAD -->
 
             <!--#region PERFIL CANT PERFIL CANT -->
-            <TextBlock Grid.Row="6" 
+            <TextBlock Grid.Row="7" 
                        Grid.Column="1"
                        Text="PERFIL" 
                        Foreground="White" 
@@ -180,7 +202,7 @@
                        VerticalAlignment="Center" 
                        HorizontalAlignment="Center"
                        />
-            <TextBlock Grid.Row="6" 
+            <TextBlock Grid.Row="7" 
                        Grid.Column="3"
                        Text="CANT" 
                        Foreground="White" 
@@ -189,7 +211,7 @@
                        VerticalAlignment="Center" 
                        HorizontalAlignment="Center"
                        />
-            <TextBlock Grid.Row="6" 
+            <TextBlock Grid.Row="7" 
                        Grid.Column="5"
                        Text="PERFIL" 
                        Foreground="White" 
@@ -198,7 +220,7 @@
                        VerticalAlignment="Center" 
                        HorizontalAlignment="Center"
                        />
-            <TextBlock Grid.Row="6" 
+            <TextBlock Grid.Row="7" 
                        Grid.Column="7"
                        Text="CANT" 
                        Foreground="White" 
@@ -211,7 +233,7 @@
 
             <!--#region PERFIL CANTIDAD UNO -->
             <ComboBox x:Name="cmbPerfilUno" 
-                      Grid.Row="8" 
+                      Grid.Row="9" 
                       Grid.Column="1" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -220,7 +242,7 @@
                       >
             </ComboBox>
             <ComboBox x:Name="cmbCantUno" 
-                      Grid.Row="8" 
+                      Grid.Row="9" 
                       Grid.Column="3" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -232,7 +254,7 @@
 
             <!--#region PERFIL CANTIDAD DOS -->
             <ComboBox x:Name="cmbPerfilDos" 
-                      Grid.Row="10" 
+                      Grid.Row="11" 
                       Grid.Column="1" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -241,7 +263,7 @@
                       >
             </ComboBox>
             <ComboBox x:Name="cmbCantDos"
-                      Grid.Row="10" 
+                      Grid.Row="11" 
                       Grid.Column="3" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -253,7 +275,7 @@
 
             <!--#region PERFIL CANTIDAD TRES -->
             <ComboBox x:Name="cmbPerfilTres" 
-                      Grid.Row="12" 
+                      Grid.Row="13" 
                       Grid.Column="1" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -262,7 +284,7 @@
                       >
             </ComboBox>
             <ComboBox x:Name="cmbCantTres"
-                      Grid.Row="12" 
+                      Grid.Row="13" 
                       Grid.Column="3" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -274,7 +296,7 @@
 
             <!--#region PERFIL CANTIDAD CUATRO -->
             <ComboBox x:Name="cmbPerfilCuatro" 
-                      Grid.Row="8" 
+                      Grid.Row="9" 
                       Grid.Column="5" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -283,7 +305,7 @@
                       >
             </ComboBox>
             <ComboBox x:Name="cmbCantCuatro" 
-                      Grid.Row="8" 
+                      Grid.Row="9" 
                       Grid.Column="7" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -295,7 +317,7 @@
 
             <!--#region PERFIL CANTIDAD CINCO -->
             <ComboBox x:Name="cmbPerfilCinco" 
-                      Grid.Row="10" 
+                      Grid.Row="11" 
                       Grid.Column="5" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -304,7 +326,7 @@
                       >
             </ComboBox>
             <ComboBox x:Name="cmbCantCinco" 
-                      Grid.Row="10" 
+                      Grid.Row="11" 
                       Grid.Column="7" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -316,7 +338,7 @@
 
             <!--#region PERFIL CANTIDAD SEIS -->
             <ComboBox x:Name="cmbPerfilSeis" 
-                      Grid.Row="12" 
+                      Grid.Row="13" 
                       Grid.Column="5" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -324,7 +346,7 @@
                       Margin="5,5,5,5" SelectionChanged="cmbPerfilSeis_SelectionChanged">
             </ComboBox>
             <ComboBox x:Name="cmbCantSeis" 
-                      Grid.Row="12" 
+                      Grid.Row="13" 
                       Grid.Column="7" 
                       Background="Transparent"
                       BorderBrush="White" 
@@ -337,7 +359,7 @@
             <!--#endregion-->
 
             <!--#region MONTO CALCULADO -->
-            <TextBlock Grid.Row="14" 
+            <TextBlock Grid.Row="15" 
                        Grid.Column="1"
                        Grid.ColumnSpan="3"
                        Text="$" 
@@ -349,7 +371,7 @@
                        Margin="5,5,5,5"
                        />
             <TextBlock x:Name="lblMontoCalculado" 
-                       Grid.Row="14" 
+                       Grid.Row="15" 
                        Grid.Column="1"
                        Grid.ColumnSpan="3"
                        Text="0" 
@@ -361,7 +383,7 @@
                        Margin="40,5,5,5"
                        />
             <TextBlock  
-                       Grid.Row="14" 
+                       Grid.Row="15" 
                        Grid.Column="1"
                        Grid.ColumnSpan="3"
                        Text="/" 
@@ -373,7 +395,7 @@
                        Margin="40,5,5,5"
                        />
             <TextBlock x:Name="lblMontoIngresado" 
-                       Grid.Row="14" 
+                       Grid.Row="15" 
                        Grid.Column="1"
                        Grid.ColumnSpan="3"
                        Text="0" 
@@ -388,9 +410,9 @@
 
             <!--#region BOTON COBRAR -->
             <Button x:Name="btnCobrar"
-                    Grid.Row="14" Grid.Column="5" 
+                    Grid.Row="15" Grid.Column="5" 
                     Grid.ColumnSpan="4"
-                    Margin="30,0,30,0"
+                    Margin="30,5,30,5"
                     Style="{DynamicResource BTNSTYLE}" 
                     Click="btnCobrar_Click"
                     >
@@ -401,7 +423,8 @@
                     </LinearGradientBrush>
                 </Button.Background>
                 <TextBlock Text="COBRAR" Foreground="Black" 
-                           FontSize="50" FontWeight="Bold"/>
+                           FontSize="50" FontWeight="Bold"
+                           TextAlignment="Center" VerticalAlignment="Center"/>
             </Button>
             <!--#endregion-->
 
@@ -427,7 +450,8 @@
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
 
-                            <TextBlock Text="TARIFA COMPLETADA"
+                            <TextBlock Text="" 
+                                       x:Name="txtMensajePopup"
                                    FontSize="20"
                                    FontWeight="SemiBold"
                                    HorizontalAlignment="Center"
