--- a/TestMdfEntityFramework/Views/Reportes.xaml
+++ b/TestMdfEntityFramework/Views/Reportes.xaml
@@ -153,7 +153,7 @@
 
                 <Canvas Background="Transparent">
                     <Border x:Name="popupBd"
-                        Background="White" 
+                        Background="CornflowerBlue" 
                         BorderBrush="Gray"
                         BorderThickness="2"
                         HorizontalAlignment="Center"
